# Python-programing-practices

./: .gitignore  Beginer_friendly_questions  README.md  Rig.model.pkl  datas.py  engine.economics.py  feature.pkl  hello.py  import numpy as np.py  jp.py  liniaregression.py  master.xlsx  matlibexamp.py  matplotlib.py  mh.csv  mix.py  new.py  pandas.py  professional_dashboard_example.py  requirements.txt  ~$master.xlsx
991ex/: .gitignore  README.md  pyproject.toml  requirements.txt
991ex/src/991ex/: main.py
examples/: drone.py  meth.py  mix.py  pandas_quickstart.py  revenue_by_region.csv  revenue_pivot.csv
